apps/gotify/deployment.yaml
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "gotify"
  labels:
    app.kubernetes.io/name: "gotify"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: "gotify"
  strategy:
    type: "RollingUpdate"
  template:
    metadata:
      labels:
        app: "gotify"
        app.kubernetes.io/name: "gotify"
        app.kubernetes.io/component: "gotify"
        app.kubernetes.io/part-of: "gotify"
    spec:
      securityContext:
        runAsUser: 43444
        runAsGroup: 43444
        runAsNonRoot: true
        seccompProfile:
          type: "RuntimeDefault"
      containers:
        - name: "gotify"
          image: "gotify/server:3.1.1"
          imagePullPolicy: "IfNotPresent"
          securityContext:
            runAsUser: 43444
            runAsGroup: 43444
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            privileged: false
            seccompProfile:
              type: "RuntimeDefault"
            capabilities:
              drop:
                - "ALL"
          resources:
            requests:
              memory: "148Mi"
              cpu: "10m"
            limits:
              memory: "256Mi"
          ports:
            - containerPort: 8080
              name: "gotify"
          volumeMounts:
            - name: "storage"
              mountPath: "/app/data"
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: "location"
          whenUnsatisfiable: "ScheduleAnyway"
      volumes:
        - name: "storage"
          emptyDir:
            sizeLimit: "100Mi"
