apps/gotify/service.yaml
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "gotify"
spec:
  ports:
    - port: 80
      targetPort: "gotify"
  selector:
    app.kubernetes.io/name: "gotify"
